--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -10,7 +10,30 @@
             <div class="members">
                 <div class="members-info d-flex justify-between align-items-center">
                     <h4 class="projects">Project Members</h4>
-                    <p style="text-align: right;"><button class="button">Add Member</button></p>
+                    <p style="text-align: right;"><button class="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add Member</button></p>
+
+
+<!-- Button trigger modal -->
+  
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-center" id="staticBackdropLabel">Add Members</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
                 </div>
                 <ul class="list-group">
                     <!-- <li class="list-group-item"><a href="">Trevin Livele</a></li> -->
