--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -52,7 +52,7 @@
 
 
         <div class="already">
-            <a routerLink="/login">Already have an account please login</a>
+            <a routerLink="/">Already have an account please login</a>
         </div>
     </div>
 
