--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,32 +1,8 @@
+<app-navbar></app-navbar>
 <div class="container-fluid">
-    <!-- <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
-        <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color: #F9573F; font-weight: 600;"> 
-              Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;">
-              Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;"> 
-              Logout <span><i class="fa-solid fa-right-from-bracket"></i></span></a>
-          </li>
-        </ul>
-      </div>
-    </nav> -->
-
-  <!--about us-->
-  <div class="bg-image">
-    <h1>hey</h1>
+  
 
 
-
-    
-  </div>
     <div class="bg-text">
       <h2 style="font-size: 3em; color: #F9573F;">Project Tracker</h2>
       <p style="font-size: 25px; color: white; font-weight: 600;"> 
