--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,20 @@
 
-  <div class="container-fluid">
+  <div class="container-fluid navy">
     <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
       <div class="container-fluid">
         <a class="navbar-brand" routerLink="/" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active bar" aria-current="page" routerLink="/" style="color: #F9573F; font-weight: 600;"> 
+            <a class="nav-link active bar" aria-current="page" routerLink="/landing" style="color: #F9573F; font-weight: 600;"> 
               Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active bar" routerLink="profile" style="color: #F9573F; font-weight: 600;">
+            <a class="nav-link active bar" routerLink="/profile" style="color: #F9573F; font-weight: 600;">
               Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active bar" routerLink="/about" style="color: #F9573F; font-weight: 600;">
+              About</a>
           </li>
           <li class="nav-item active bar">
             <a class="nav-link active bar" style="cursor:pointer;" (click)="logoutUser()" style="color: #F9573F; font-weight: 600;"> 
