--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,6 @@
+<app-navbar></app-navbar>
+
+
 <div class="container">
   <!--<h3 class="d-flex justify-content-center">{{title}}</h3>-->
   <div class="pro">
