--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid navy">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light " style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
       <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
+        <a class="navbar-brand" routerLink="/landing" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active bar" aria-current="page" routerLink="/landing" style="color: #F9573F; font-weight: 600;"> 
