--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -2,9 +2,15 @@
   <h4 class="d-flex justify-content-center">Add Project</h4>
 
   <form (ngSubmit)="onSubmit()" #form="ngForm">
-          <input type="text" name="text" class="form-control" id="text" placeholder="Project Name" ngModel required>
-          <textarea class="form-control" name="textarea" id="Textarea" rows="3" placeholder="Project Description" type="text"  required [(ngModel)]="description"></textarea>
+          <input type="text" name="name" class="form-control" id="text" placeholder="Project Name" ngModel required>
+          <textarea class="form-control" name="description" id="Textarea" rows="3" placeholder="Project Description" type="text"  required [(ngModel)]="description"></textarea>
           <p>{{description}}</p>
+         
+          <input type="url" class="form-control" name="github_link" id="link" placeholder="Project Link" ngModel required>
+          <input type="text" class="form-control" name="technologies" id="link" placeholder="Technology Used" ngModel required>
+
+          <input class="form-control" name="image" type="file" id="formFile" ngModel required>
+          <label for="">Select stack:</label>
           <div class="radio"  *ngFor="let track of stack">
             <label for="stacks">
                 <input type="radio" name="track" ngModel [value]="track" placeholder="Select stack">
@@ -12,8 +18,6 @@
             </label>
 
         </div>
-          <input type="text" class="form-control" name="link" id="link" placeholder="Project Link" ngModel required>
-          <input class="form-control" name="file" type="file" id="formFile" ngModel required>
           <div class="d-grid gap-2 col-6 mx-auto">
             <button class="btn btn-success" type="Submit" [disabled]="form.invalid">Add Project</button>
         </div>
