--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<app-navbar></app-navbar>
+
+<div class="container mt-3">
     <div class="row">
         <div class="col-md-12">
             <h3 class="text-center mt-5 projects">Projects</h3>
