displayed stack to the add projects form

--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-  <h4 class="d-flex justify-content-center mt-5">Add Project</h4>
+  <h4 class="d-flex justify-content-center mt-5 project">Add Project</h4>
   <hr>
 
   <form (ngSubmit)="onSubmit()" #form="ngForm">
