--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -11,23 +11,18 @@
             </ul>    
           </div>
         <!-- </div> -->
-          <div class="main mt-5">
+          
+
+          <div class="main mt-5" *ngFor="let track of tracks ; let i = index">
             <div class="col-6 img">
-              <img src="../../../assets/images/androidremovebg.png" class="rounded float-end" 
+              <img src="https://res.cloudinary.com/dlntyyesm/{{track.image}}" class="img-responsiverounded float-end" 
               alt="..." width="300px" height="350px"> 
               <div class="col-6 track">
-                <button type="button" (click)="projects()" class="btn btn-link" 
-                style="background-color: #101F3C; color: aliceblue; text-decoration: none">Android Development</button>     
+                <button type="button" (click)="projects(track.id)" class="btn btn-link" 
+                style="background-color: #101F3C; color: aliceblue; text-decoration: none">
+              {{track.name}}
+            </button>     
               </div>     
-            </div>
-
-            <div class="col-6 img1">
-              <img src="../../../assets/images/web.png" class="rounded float-end" 
-              alt="..." width="300px" height="350px"> 
-              <div class="col-6 track1">
-                <button type="button" class="btn btn-link" 
-                style="background-color: #101F3C; color: aliceblue; text-decoration: none">Web Development</button>
-              </div>
             </div>
             <br>
             <br>
