--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,103 +1,140 @@
-
-
-p {
-  font-size: 20px;
+.body{
+  background-image: url("../../assets/projecttracker.jpg");
+  overflow: hidden;
+}
+h4{
+  font-family: 'Playfair Display', serif;
+  font-size: 40px;
+  font-weight: 900;
+  color: #F9573F;
 }
 
-h3 {
-  font-size: 30px;
+p{
+  font-family: 'Quicksand', sans-serif;
 }
 
 .bg-image {
-  background-image: url("../../../assets/images/android.png");
+  /* Add the blur effect */
+  filter: blur(4px);
+  -webkit-filter: blur(5px);
+  overflow: hidden;
+/* 
+  /* Full height */
+  /* height: 50vh; */
+
+  /* Center and scale the image nicely */
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;   */ 
 }
 
-
 .bg-text {
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-  font-weight: bold;
   border: 3px solid #f1f1f1;
+  background-color: rgba(0,0,0, 0.4); 
+  font-weight: bold;
   position: absolute;
   top: 40%;
   left: 50%;
+  border-radius: 15px;
   transform: translate(-50%, -50%);
   z-index: 1;
   width: 80%;
-  padding: 20px;
+  padding: 10px 5px 10px;
   text-align: center;
 }
 
-
-
-
-
-
-
+button{
+  padding: 1.3rem 4rem;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #101F3C;
+  background-color: #cacdd2;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  left: 10px;
+}
+ 
+button:hover {
+  background-color: #101F3C;
+  box-shadow: 0px 15px 20px rgba(249, 87, 63, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+ 
+button:active {
+  transform: translateY(-1px);
+}
 
 
 /* footer */
 footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #101f3c;
-  height: auto;
-  width: 100vw;
-  padding-top: 5px;
-  color: #fff;
-  padding-bottom: 2px;
-}
-.footer-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-.footer-content h3 {
-  font-size: 2.1rem;
-  font-weight: 500;
-  text-transform: capitalize;
-  line-height: 2rem;
-}
-.footer-content p {
-  max-width: 500px;
-  margin: 2px auto;
-  line-height: 28px;
-  font-size: 14px;
-  color: #cacdd2;
-}
-.socials {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem 0 2rem 0;
-}
-.socials li {
-  margin: 0 10px;
-}
-.socials a {
-  text-decoration: none;
-  color: #fff;
-  border: 1.1px solid white;
-  padding: 2px;
-  border-radius: 50%;
-}
-.socials a i {
-  font-size: 1.1rem;
-  width: 20px;
-  transition: color 0.4s ease;
-}
-.socials a:hover i {
-  color: #f9573f;
-}
-@media (max-width: 500px) {
-  .footer-menu ul {
-    display: flex;
-    margin-top: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #101f3c;
+    height: auto;
+    width: 100vw;
+    padding-top: 5px;
+    color: #fff;
+    padding-bottom: 2px;
   }
-}
+  .footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-content h3 {
+    font-size: 2.1rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 2rem;
+  }
+  .footer-content p {
+    max-width: 500px;
+    margin: 2px auto;
+    line-height: 28px;
+    font-size: 14px;
+    color: #cacdd2;
+  }
+  .socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 2rem 0;
+  }
+  .socials li {
+    margin: 0 10px;
+  }
+  .socials a {
+    text-decoration: none;
+    color: #fff;
+    border: 1.1px solid white;
+    padding: 2px;
+    border-radius: 50%;
+  }
+  .socials a i {
+    font-size: 1.1rem;
+    width: 20px;
+    transition: color 0.4s ease;
+  }
+  .socials a:hover i {
+    color: #f9573f;
+  }
+  @media (max-width: 500px) {
+    .footer-menu ul {
+      display: flex;
+      margin-top: 5px;
+    }
+  }
+  
