--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,48 +1,27 @@
 <app-navbar></app-navbar>
-  <!--side navbar-->
-  <div class="container-fluid image">
-      <div class="row">
-        <!-- <div class="column sidebar"> -->
-          <div class="sidebar mt-5">
-            <ul>
-             
-              <li><button class="btn-light btn-lg" (click)="project()" type="submit">Add Project</button></li>
-              <li><button class="btn-light btn-lg" type="submit">Contact Us</button></li>
-            </ul>    
-          </div>
-        <!-- </div> -->
-          <div class="main mt-5">
-            <div class="col-6 img">
-              <img src="../../../assets/images/androidremovebg.png" class="rounded float-end" 
-              alt="..." width="300px" height="350px"> 
-              <div class="col-6 track">
-                <button type="button" (click)="projects()" class="btn btn-link" 
-                style="background-color: #101F3C; color: aliceblue; text-decoration: none">Android Development</button>     
-              </div>     
-            </div>
 
-            <div class="col-6 img1">
-              <img src="../../../assets/images/web.png" class="rounded float-end" 
-              alt="..." width="300px" height="350px"> 
-              <div class="col-6 track1">
-                <button type="button" class="btn btn-link" 
-                style="background-color: #101F3C; color: aliceblue; text-decoration: none">Web Development</button>
-              </div>
-            </div>
-            <br>
-            <br>
-          </div>    
-
-      <div class="row choose">
-        <div class="column">
-          <button class="btn-light btn-lg buttn" type="submit" 
-          style="background-color: #F9573F; color: aliceblue;">
-           Choose Track to View and Contribute to Projects</button>
-        </div>
+<div class="container">
+  <h4>Dashboard</h4>
+  <hr>
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <a href="#" class="btn btn-primary">Track</a>
       </div>
     </div>
+    
+    <footer>
+      <div class="footer-content">
+        <h5>Contact Us</h5>
+        <ul class="socials" style="position: relative; right: 15px;">
+          <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+        </ul>
+        <div class="footer-bottom">
+          <p style="position: relative; left: 10%;">Copyright &copy;2022 <a href="#" 
+            style="text-decoration: none; color: aliceblue;">ProjectTracker</a> </p>
+        </div>
+      </div>
+    </footer>
 </div>
-    
-    
-
-
