--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,8 +13,8 @@
               Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active bar" routerLink="/about" style="color: #F9573F; font-weight: 600;">
-              About</a>
+            <a class="nav-link active bar" routerLink="/add-project" style="color: #F9573F; font-weight: 600;">
+              Add Project</a>
           </li>
           <li class="nav-item active bar">
             <a class="nav-link active bar" style="cursor:pointer;" (click)="logoutUser()" style="color: #F9573F; font-weight: 600;"> 
