--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -7,9 +7,9 @@
   border-radius: 12px;
   /* background-color: #dfac7c; */
 }
-.card{
+/* .card{
   display: none;
-}
+} */
 .img-container {
   position: relative;
   overflow: hidden;
