--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -1,4 +1,11 @@
-
+h1 {
+  text-transform: capitalize;
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+  margin-top: 3.5rem;
+  color: #023047;
+  font-weight: bold;
+}
   .sidebar{
     background-color:#E1E1E1;
     flex: 30%;
@@ -63,12 +70,13 @@
     height: 100%;
   } 
 
-  /* .btns{
-    position: relative;
-    bottom: -2%;
-    justify-content: center;
-    
-  } */
+.product-img {
+  display: block;
+  width: 100%;
+  height: 12rem;
+  transition: all 0.3s linear;
+  padding: 0.5rem;
+}
 
   .img{
     position: relative;
