--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,56 +1,4 @@
-<!-- <app-navbar></app-navbar>
-<div class="container mt-3">
-    <div class="row">
-        <div class="col-md-12">
-            <h3 class="text-center mt-5 projects">Projects</h3>
-            <hr>
-        </div>
-    </div>
-</div>
-    <div class="container">
-        <div id="button">
-            <button type="button" class="btn btn-outline-primary" onClick="filterProjects('all')">All Projects</button>
-            <button type="button" class="btn btn-outline-secondary" onClick="filterProjects('android')">Android</button>
-            <button type="button" class="btn btn-outline-success" onClick="filterProjects('fullstack')">Fullstack</button>
-
-        </div>
-       
-    <hr>
-    </div>
-
-    
-    <div class="container">
-        <div class="row" *ngFor="let project of projects ; let i = index">
-            <div class="col-md-3 mt-2 d-flex justify-content-start align-items-start">
-                
-                <div class="card shadow card-items mt-2">
-                    <div class="img-container">
-                        <img src="https://res.cloudinary.com/dlntyyesm/{{project.image}}" class="card-img-top" alt="..." class="product-img">
-                        <button class="bag-btn"  (click)="projectDetail(i)">
-                            View Project
-                        </button>
-                    </div>
-                    
-                    <div class="card-body">
-                        <div class="card all">
-                            <div class="card-header">
-                                <span class="info">Category: </span> <span class="details">{{project.track.name}}</span>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                              <li class="list-group-item"><span class="info">Project Name: </span> <span class="details">{{project.name}}</span></li>
-                              <li class="list-group-item"><span class="info">Project Description: </span> <span class="details">{{project.description}}</span></li>
-                              <li class="list-group-item"><span class="info">Technologies: </span> <span class="technology mt-2">{{project.technologies}}</span> </li>
-                            </ul>
-                        </div>
-                    </div>
-                  </div>
-            </div>
-        </div>
-    
-</div> -->
-
-
-    
+<app-navbar></app-navbar>
 <div class="container mt-3">
     <div class="row">
         <div class="col-md-12">
@@ -61,20 +9,29 @@
 </div>
 
 <div class="container">
-    <div id="button">
-        <button type="button" class="btn btn-outline-primary" onClick="filterProjects('all')">All Projects</button>
-        <button type="button" class="btn btn-outline-secondary" onClick="filterProjects('android')">Android</button>
-        <button type="button" class="btn btn-outline-success" onClick="filterProjects('fullstack')">Fullstack</button>
-
-    </div>
-</div>
-
-<div class="container">
     <div class="row">
-        <div class="col-md-6" *ngFor="let project of projects ; let i = index">
-            <img src="https://res.cloudinary.com/dlntyyesm/{{project.image}}" class="card-img-top" alt="..." class="product-img">
-
-            <button (click)="projectDetail(i)"> {{project.name}} </button>
+        <div class="col-md-4" *ngFor="let project of projects ; let i = index">
+            <div class="card shadow card-items mt-2">
+                <div class="img-container">
+                    <img src="https://res.cloudinary.com/dlntyyesm/{{project.image}}" class="card-img-top" alt="..." class="product-img">
+                    <button class="bag-btn"  (click)="projectDetail(i)">
+                         {{project.name}} 
+                    </button>
+                </div>
+                
+                <div class="card-body">
+                    <div class="card all">
+                        <div class="card-header">
+                            <span class="info">Category: </span> <span class="details">{{project.track.name}}</span>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"><span class="info">Project Name: </span> <span class="details">{{project.name}}</span></li>
+                          <li class="list-group-item"><span class="info">Project Description: </span> <span class="details">{{project.description}}</span></li>
+                          <li class="list-group-item"><span class="info">Technologies: </span> <span class="technology mt-2">{{project.technologies}}</span> </li>
+                        </ul>
+                    </div>
+                </div>
+              </div>
+            </div> 
         </div>
     </div>
-</div>
