--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid mt-5">
+<app-navbar></app-navbar>
+<div class="container-fluid mt-5" style="margin-top: 8rem">
     <div class="row single" style="max-width: 1000px;margin:auto">
         <div class="col-md-4 mb-5">
             <div class="img-container">
@@ -51,7 +52,7 @@
             <hr>
             <ul>
                 <li><span class="info">Project Name:</span> <span class="details"> {{project.name}}</span></li>
-                <li><span class="info">Owner:</span> <span class="details"> {{project.owner}}</span></li>
+                <!-- <li><span class="info">Owner:</span> <span class="details"> {{project.owner}}</span></li> -->
                 <li><span class="info">Track:</span> <span class="details"> {{project.track}}</span></li>
                 <li><span class="info">View Repo:</span> <span class="details"> {{project.github_link}}</span></li>
                 <li><span class="info">Project Description: </span> <span class="details"> {{project.description}}</span></li>
