--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <a class="navbar-brand" routerLink="/landing" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active bar" aria-current="page" routerLink="/landing" style="color: #F9573F; font-weight: 600;"> 
+            <a class="nav-link active bar" aria-current="page" routerLink="/about" style="color: #F9573F; font-weight: 600;"> 
               Home</a>
           </li>
           <li class="nav-item">
