--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -22,6 +22,9 @@
     display: flex;
     flex-direction: column-reverse;
 }
+.badge {
+    background-color: #E9ECEF;
+}
 .navbar{
     background-color: rgb(2, 2, 44);
 }
@@ -30,11 +33,10 @@
 }
 button{
     margin: 20px;
-    background-color: rgb(2, 2, 44);
+    background-color: #F9573F;
+
 }
 
 button:hover{
-    background-color: rgb(20, 20, 209);
-    
-    
+    background-color: #F9573F;
 }
