modified url path for the image url

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
 
 
         <div class="frontimg">
-            <img  src="../../../assets/auth-images/front.jpg" alt="front img" height="600px" width="650px">
+            <img  src="assets/auth-images/front.jpg" alt="front img" height="600px" width="650px">
         </div>
 
 
