--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container-fluid body">
   <div class="row">
-    <div class="bg-image"><img src="../../../assets/images/projecttracker.jpg" alt=""
+    <div class="bg-image"><img src="assets/images/projecttracker.jpg" alt=""
       width="100%" height="100%" class="img-fluid"></div>
   </div>
   <div class="row align-items-center bg-text">
