--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
     </section>
 
     <div class="frontimg">
-        <img src="../../../assets/auth-images/login.jpg" alt="front img" height="600px" width="750px">
+        <img src="assets/auth-images/login.jpg" alt="front img" height="600px" width="750px">
     </div>
 
 
