--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,16 +1,16 @@
 <app-navbar></app-navbar>
 <div class="container-fluid mt-5" style="margin-top: 8rem">
     <div class="row single" style="max-width: 1000px;margin:auto">
-        <div class="col-md-4 mb-5">
+        <div class="col-md-4 mb-5 mt-5">
             <div class="img-container">
-                <img src="{{project.image}}"
+                <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433"
                     alt="product" class="product-img">
             </div>
         </div>
         <div class="col-md-5 ">
             <div class="members">
                 <div class="members-info d-flex justify-between align-items-center">
-                    <h4 class="projects">Project Members</h4>
+                    <h4 class="projects mt-5">Project Members</h4>
                     <p style="text-align: right;"><button class="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add Member</button></p>
 
 
